Clean images, resolve overlapping elements

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,8 @@
+
 body {
     margin: 1.5em;
     font-family: 'Poppins', sans-serif;
+    background-color: rgb(246, 228, 228);
 }
 
 a {
@@ -13,7 +15,7 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    background: url('../images/daniele-levis-pelusi-Vey6fioB1eI-unsplash.jpeg');
+    background: url('../images/pawel-czerwinski-ruJm3dBXCqw-unsplash.jpeg');
     background-size: cover;
     background-position-x: 10%;
     background-position-y: 10%;
@@ -149,13 +151,15 @@ nav {
 
 // PROJECTS SECTION
 .projects-info {
+    display: unset;
+    padding: 10%;
     .projects {
         text-align: center;
         margin-bottom: 4em;
 
         .title {
             margin-top: 7px;
-            padding-top: 5%;
+            padding-top: 2.5%;
             font-weight: bold;
             font-size: 1.25rem;
             margin-bottom: 3em; 
@@ -187,13 +191,17 @@ nav {
     left: 0;
     background-image: linear-gradient(rgb(248, 199, 227), rgb(252, 247, 249));
     width: 100%;
-    height: 40%;
+    height: 35vh;
     z-index: -1;
     opacity: 60%;
+    top: 100%;
 
 }
 
 // SKILLS SECTION
+.skills-info {
+    display: unset;
+}
 .skills {
     text-align: center;
     margin-bottom: 5em;
@@ -231,12 +239,13 @@ nav {
     height: 40%;
     z-index: -1;
     opacity:60%;
+    top: 135%;
 }
 
 
 // CONTACT SECTION
  #contact {
-     padding-top: 0.5%;
+     padding-top: 4%;
      font-size: 20px;
      text-align: center;
      font-weight: bold;
@@ -361,6 +370,10 @@ footer {
         margin-left: 0.5em;
     }
    }
+
+   .skills .title {
+       margin-top: 15%;
+   }
 }
 
 @media only screen and (max-width: 375px) { 
@@ -381,6 +394,17 @@ footer {
     }
     .projects-info {
         margin-top: 38.6%;
+
+        .projects {
+            margin-top: 35%;
+
+            .title {
+                margin-bottom: 2em;
+            }
+        }
+    }
+    .skills {
+        margin-bottom: 2em;
     }
 }
 
@@ -498,11 +522,6 @@ footer {
     .projects {
         padding-top: 0;
     }
-    // .more-info {
-    //     margin-left: 0em;
-    // }
-
-
 
     .feature {
         display: grid;
@@ -547,8 +566,12 @@ footer {
     .feature {
         gap: 0;
     }
+
     .projects {
         padding-top: 0;
+    }
+    .projects-info {
+        padding-top: 1%;
     }
 }
 
